EROPSPT-302: Refactor summaries layer
