# src/main/kotlin/uk/gov/dluhc/emsintegrationapi/service/dto/PendingRegisterCheckSummary.kt
@@ -1,0 +1,10 @@
+package uk.gov.dluhc.emsintegrationapi.service.dto
+
+import java.time.Instant
+
+data class PendingRegisterCheckSummary(
+    val gssCode: String,
+    val registerCheckCount: Int,
+    val earliestDateCreated: Instant?,
+    val latestMatchResultSentAt: Instant?,
+)
